--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,18 @@
 <classpath>
-  <classpathentry output="target\scala-2.10\classes" kind="src" path="src\main\scala"/>
-  <classpathentry output="target\scala-2.10\classes" kind="src" path="src\main\java"/>
-  <classpathentry output="target\scala-2.10\test-classes" kind="src" path="src\test\scala"/>
-  <classpathentry output="target\scala-2.10\test-classes" kind="src" path="src\test\java"/>
+  <classpathentry output="target\scala-2.11\classes" kind="src" path="src\main\scala"/>
+  <classpathentry output="target\scala-2.11\classes" kind="src" path="src\main\java"/>
+  <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\scala"/>
+  <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\java"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\net.sourceforge.htmlcleaner\htmlcleaner\jars\htmlcleaner-2.4.jar"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\org.jdom\jdom2\jars\jdom2-2.0.4.jar"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\net.liftweb\lift-json_2.11\jars\lift-json_2.11-2.6-M4.jar"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\org.scala-lang\scalap\jars\scalap-2.11.1.jar"/>
+  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\org.scala-lang.modules\scala-xml_2.11\bundles\scala-xml_2.11-1.0.2.jar"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\org.scala-lang.modules\scala-parser-combinators_2.11\bundles\scala-parser-combinators_2.11-1.0.1.jar"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\com.thoughtworks.paranamer\paranamer\jars\paranamer-2.4.1.jar"/>
+  <classpathentry kind="lib" path="H:\apps\xp\.ivy2\cache\org.scalatest\scalatest_2.11\bundles\scalatest_2.11-2.2.0.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
