--- a/.classpath
+++ b/.classpath
@@ -1,40 +1,39 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry output="target\scala-2.11\classes" kind="src" path="src\main\scala"/>
-  <classpathentry output="target\scala-2.11\classes" kind="src" path="src\main\java"/>
-  <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\scala"/>
-  <classpathentry output="target\scala-2.11\test-classes" kind="src" path="src\test\java"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.scalatest\scalatest_2.11\bundles\scalatest_2.11-2.2.1.jar"/>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.scala-lang.modules\scala-xml_2.11\bundles\scala-xml_2.11-1.0.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\com.sun.mail\javax.mail\jars\javax.mail-1.5.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\javax.activation\activation\jars\activation-1.1.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\javax.mail\javax.mail-api\jars\javax.mail-api-1.5.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.james\apache-mime4j-core\jars\apache-mime4j-core-0.7.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.james\apache-mime4j-examples\jars\apache-mime4j-examples-0.7.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.james\apache-mime4j-dom\jars\apache-mime4j-dom-0.7.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.james\apache-mime4j-storage\jars\apache-mime4j-storage-0.7.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\commons-logging\commons-logging\jars\commons-logging-1.1.1.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.james\apache-mime4j-benchmark\jars\apache-mime4j-benchmark-0.7.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\commons-io\commons-io\jars\commons-io-1.4.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.elasticsearch\elasticsearch\jars\elasticsearch-1.4.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-core\jars\lucene-core-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-analyzers-common\jars\lucene-analyzers-common-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-queries\jars\lucene-queries-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-memory\jars\lucene-memory-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-highlighter\jars\lucene-highlighter-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-queryparser\jars\lucene-queryparser-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-sandbox\jars\lucene-sandbox-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-suggest\jars\lucene-suggest-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-misc\jars\lucene-misc-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-join\jars\lucene-join-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-grouping\jars\lucene-grouping-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.lucene\lucene-spatial\jars\lucene-spatial-4.10.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\com.spatial4j\spatial4j\bundles\spatial4j-0.4.1.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.commons\commons-io\jars\commons-io-1.3.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\commons-lang\commons-lang\jars\commons-lang-2.6.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\junit\junit\jars\junit-4.12.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.hamcrest\hamcrest-core\jars\hamcrest-core-1.3.jar"/>
-  <classpathentry kind="lib" path="C:\Users\mohan\.ivy2\cache\org.apache.derby\derby\jars\derby-10.4.1.3.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="src/main/scala"/>
+	<classpathentry kind="src" output="target/scala-2.11/classes" path="src/main/java"/>
+	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/scala"/>
+	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" path="src/test/resources"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.1.jar"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-core/jars/jackson-core-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-databind/jars/jackson-databind-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-annotations/bundles/jackson-annotations-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/jars/javax.mail-1.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.activation/activation/jars/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/jars/javax.mail-api-1.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.elasticsearch/elasticsearch/jars/elasticsearch-1.4.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-core/jars/lucene-core-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-analyzers-common/jars/lucene-analyzers-common-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-queries/jars/lucene-queries-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-memory/jars/lucene-memory-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-highlighter/jars/lucene-highlighter-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-queryparser/jars/lucene-queryparser-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-sandbox/jars/lucene-sandbox-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-suggest/jars/lucene-suggest-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-misc/jars/lucene-misc-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-join/jars/lucene-join-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-grouping/jars/lucene-grouping-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-spatial/jars/lucene-spatial-4.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.spatial4j/spatial4j/bundles/spatial4j-0.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.commons/commons-io/jars/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/commons-io/commons-io/jars/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/commons-lang/commons-lang/jars/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/junit/junit/jars/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.derby/derby/jars/derby-10.4.1.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
