--- a/.classpath
+++ b/.classpath
@@ -6,14 +6,20 @@
 	<classpathentry kind="src" output="target/scala-2.11/test-classes" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.1.jar"/>
-	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.thoughtworks.xstream/xstream/jars/xstream-1.4.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/xmlpull/xmlpull/jars/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/xpp3/xpp3_min/jars/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.google.code.gson/gson/jars/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.module/jackson-module-scala_2.11/bundles/jackson-module-scala_2.11-2.5.0.jar"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-core/jars/jackson-core-2.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-databind/jars/jackson-databind-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-annotations/bundles/jackson-annotations-2.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/jars/javax.mail-1.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-databind/jars/jackson-databind-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.thoughtworks.paranamer/paranamer/jars/paranamer-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/jars/javax.mail-1.5.2.jar" sourcepath="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/srcs/javax.mail-1.5.2-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.activation/activation/jars/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/jars/javax.mail-api-1.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/jars/javax.mail-api-1.5.2.jar" sourcepath="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/srcs/javax.mail-api-1.5.2-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.elasticsearch/elasticsearch/jars/elasticsearch-1.4.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-core/jars/lucene-core-4.10.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-analyzers-common/jars/lucene-analyzers-common-4.10.2.jar"/>
