--- a/.classpath
+++ b/.classpath
@@ -17,10 +17,10 @@
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-annotations/bundles/jackson-annotations-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.fasterxml.jackson.core/jackson-databind/jars/jackson-databind-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.thoughtworks.paranamer/paranamer/jars/paranamer-2.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/jars/javax.mail-1.5.2.jar" sourcepath="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/srcs/javax.mail-1.5.2-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.sun.mail/javax.mail/jars/javax.mail-1.5.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.activation/activation/jars/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/jars/javax.mail-api-1.5.2.jar" sourcepath="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/srcs/javax.mail-api-1.5.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.elasticsearch/elasticsearch/jars/elasticsearch-1.4.2.jar" sourcepath="C:/Users/mohan/.ivy2/cache/org.elasticsearch/elasticsearch/srcs/elasticsearch-1.4.2-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/javax.mail/javax.mail-api/jars/javax.mail-api-1.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.elasticsearch/elasticsearch/jars/elasticsearch-1.4.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-core/jars/lucene-core-4.10.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-analyzers-common/jars/lucene-analyzers-common-4.10.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-queries/jars/lucene-queries-4.10.2.jar"/>
@@ -34,8 +34,8 @@
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-grouping/jars/lucene-grouping-4.10.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.lucene/lucene-spatial/jars/lucene-spatial-4.10.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/com.spatial4j/spatial4j/bundles/spatial4j-0.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/commons-io/commons-io/jars/commons-io-2.4.jar" sourcepath="C:/Users/mohan/.ivy2/cache/commons-io/commons-io/srcs/commons-io-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.apache.commons/commons-io/jars/commons-io-1.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/commons-io/commons-io/jars/commons-io-1.3.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/commons-lang/commons-lang/jars/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/junit/junit/jars/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohan/.ivy2/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar"/>
